K1J-1240: Impl ICF (#501)
* K1J-1240: Impl ICF wip

* K1J-1240: Impl ICF wip

* K1J-1240: impl icf value wip

* K1J-1240: impl icf wip

* K1J-1240: impl icf; add mapper for icf value wip

* K1J-1240: Minor fix

* K1J-1240: added action fmb

* K1J1240: added correct icf to funk and akt wip

* K1J-1240: add xml generator

* K1J-1240: add validation wip

* K1J-1240: Update ElementValue.

* K1J1240: added xml generator

* K1J-1240: add unit tests

* K1J-1240: minor fix

* K1J1240: added icfCodesPropertyName

* K1J-1240: minor fix

* K1J-1240: impl icf value wip

* K1J-1240: impl icf wip

* K1J-1240: impl icf; add mapper for icf value wip

* K1J-1240: Minor fix

* K1J-1240: added action fmb

* K1J1240: added correct icf to funk and akt wip

* K1J-1240: add xml generator

* K1J-1240: add validation wip

* K1J-1240: Update ElementValue.

* K1J1240: added xml generator

* K1J-1240: add unit tests

* K1J-1240: minor fix

* K1J1240: added icfCodesPropertyName

* K1J-1240: minor fix

* K1J-1240: Impl ICF wip

* K1J-1240: impl icf value wip

# Conflicts:
#	certificate-service/app/src/main/java/se/inera/intyg/certificateservice/infrastructure/certificatemodel/fk7804/CertificateModelFactoryFK7804.java

* K1J-1240: impl icf wip

* K1J-1240: impl icf; add mapper for icf value wip

* K1J-1240: Minor fix

* K1J-1240: added action fmb

* K1J1240: added correct icf to funk and akt wip

* K1J-1240: add xml generator

* K1J-1240: add validation wip

* K1J-1240: Update ElementValue.

* K1J1240: added xml generator

* K1J-1240: add unit tests

* K1J-1240: minor fix

* K1J1240: added icfCodesPropertyName

* K1J-1240: minor fix

* K1J-1240: impl icf value wip

* K1J1240: added correct icf to funk and akt wip

* K1J-1240: add xml generator

* K1J-1240: Update ElementValue.

* K1J1240: added xml generator

* K1J-1240: minor fix

* K1J1240: added icfCodesPropertyName

* K1J-1240: minor fix

* K1J-1240: Fix enum naming

* K1J-1240: Added CertificateDataIcfConfigConverter tests

* K1J-1240: Added